# mcp-fattura-elettronica-it

./: .env.example  .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml  server.json  server.py
.github/workflows/: publish.yml
tests/: __init__.py  test_body_tools.py  test_global_tools.py  test_header_tools.py  test_mcp_integration.py
tools/: __init__.py  adapters.py  body_tools.py  global_tools.py  header_tools.py
